Fix the bullets overlapping text in program pages
close #19

--- a/sites/all/themes/vonesc/sass/_views.scss
+++ b/sites/all/themes/vonesc/sass/_views.scss
@@ -306,13 +306,14 @@
             font-size:1.2em;
             font-weight: bold;
             overflow: hidden;
-            margin-left:0;
-            padding-left: 25px;
+            margin:0;
+            padding:0;
 
             li
             {
-                width: 50%;
+                width: 45%;
                 float: left;
+                margin-left: 5%;
             }
         }
     }
